fix: error page spacing

--- a/src/page/error/error.module.scss
+++ b/src/page/error/error.module.scss
@@ -3,9 +3,13 @@
 .error {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  height: calc(100vh - 200px - clamp(79.39px, 13.78vw, 163.06px));
+  min-height: calc(
+    100vh - 200px - clamp(79.39px, 13.78vw, 163.06px) -
+      clamp(113px, 14.32vw, 139px) - clamp(113px, 14.32vw, 139px)
+  );
+  margin: clamp(113px, 14.32vw, 139px) 0;
 
   &__code {
     font-size: clamp(96px, 21.82vw, 288px);
